fixed about title so no gaps show.

--- a/home.css
+++ b/home.css
@@ -97,7 +97,8 @@
 
 h1 {
     text-align: center;
-    padding: 50px;
+    padding: 30px;
+    margin: 0;
     font-family: 'IM Fell English SC', cursive;
     background-color: rgb(0, 0, 0);
     color: rgb(95, 4, 95);
